[package]
name = "dyna-lens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.23", features=["derive"]}
csv = "1.1.6"
statistical = "1.0.0"
rayon = "1.6.1"
unicode-segmentation = "1.10.0"
term_size = "0.3.2"
chrono = "0.4.23"
either = "1.8.0"
